Corrección en validación de permisos en objetos seguros para usuarios